[gin-tuto] add body json api
