# gin-tuto/docs/swagger.yaml
@@ -1,3 +1,14 @@
+definitions:
+  models.StJsonTest:
+    properties:
+      first:
+        type: string
+      second:
+        type: string
+    required:
+    - first
+    - second
+    type: object
 info:
   contact: {}
 paths:
@@ -23,6 +34,24 @@ paths:
         "200":
           description: ""
       summary: 써머리를 직접 수정했습니다
+  /v1/jsonTest:
+    post:
+      consumes:
+      - application/json
+      description: 자세한 설명은 이곳에 적습니다.
+      parameters:
+      - description: post json for test
+        in: body
+        name: jsonbody
+        required: true
+        schema:
+          $ref: '#/definitions/models.StJsonTest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: jsonparam binding test
   /v1/login:
     post:
       consumes:
